Lab/go-api-ingress.yaml
# To use this you have to have an nginx ingress controller installed in your cluster.
# And edit your /etc/hosts file to point myapi.local to the IP of your cluster node.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx # Use nginx ingress controller and for backward compatibility
spec:
  ingressClassName: nginx # Use nginx ingress controller
  rules:
  - host: myapi.local #host-based routing
    http:
      paths:
      - path: / # any path under myapi.local will be routed to the service
        pathType: Prefix
        backend:
          service:
            name: go-api-service # Name of the service to route traffic to
            port:
              number: 80 # Port on which the service is exposed
